--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -32,5 +32,6 @@
     "@umijs/preset-dumi": "1.x",
     "react": "^16.13.1 || ^17.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "gitHead": "8534e5091d75733f400867be8c2d6f8efaa50713"
 }
